--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.ReminderWithGpt"
         tools:targetApi="31">
         <activity
+            android:name="app.somadhan.myapplication.NoteReadingActivity"
+            android:exported="false" />
+        <activity
+            android:name="app.somadhan.myapplication.AiTextActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name="app.somadhan.myapplication.NoteTakingActivity"
             android:exported="false" />
         <activity
